commento-common.scss: fix word wrap issue in label

--- a/frontend/sass/commento-common.scss
+++ b/frontend/sass/commento-common.scss
@@ -121,6 +121,7 @@ blockquote {
   display: inline-block;
   background: #37b24d;
   color: white;
+  white-space: nowrap;
   margin: 0 8px;
   padding: 2px 6px 2px 6px;
   border-radius: 100px;
